@@ -1,3 +1,6 @@
+2008-01-31 Fix \sqrt with radical number (broken by making [ and ]
+           work below) - MGD
+
 2008-01-27 Applied  Martin Teichmann's patch to improve the Qt4
            backend. Uses Qt's builtin toolbars and statusbars.
            See bug 1828848 - DSD
